fix: the x in the offline badge is sometimes low contrast, especially in dark themes
Fixes #6784

--- a/plugins/plugin-core-themes/web/scss/solarized-dark.scss
+++ b/plugins/plugin-core-themes/web/scss/solarized-dark.scss
@@ -43,4 +43,7 @@ body[kui-theme='Solarized'] {
   --color-latency-3: #fee090;
   --color-latency-4: #fc8d59;
   --color-latency-5: #d73027;
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base00);
 }
